# Defiant

./: .gitignore  README.md  structure.md
.github/workflows/: build.yml  deploy.yml
backend/: cargo.toml
backend/src/: config.rs  db.rs  errors.rs  main.rs
backend/src/api/: mod.rs  v1.rs
backend/src/api/v1/: payments.rs
backend/src/middleware/: auth.rs
backend/src/migrations/: 001_initial_schema.sql  002_plans_and_products.sql
backend/src/models/: customer.rs  mod.rs  payment.rs
backend/src/services/: mod.rs  payment_service.rs
docker/: docker-compose.yml
docker/nginx/: nginx.conf
frontend/: CMakeLists.txt
frontend/include/defiant/core/: app.cpp  app.hpp
frontend/include/defiant/ui/: components.hpp
frontend/src/ui/: components.cpp
frontend/web/: index.html  style.css
scripts/: build.sh  deploy.sh
shared/include/: defiant_ffi.h
shared/src/: lib.rs
